<resources>
    <string name="app_name">Restaurant management</string>
    <string name="orders">Orders</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="customer_id">Customer Id</string>
    <string name="dish"> Dish</string>
    <string name="rider_id">Rider\'s id</string>
    <string name="price">Price (€)</string>
    <string name="totCost">Total cost</string>
    <string name="total">Total</string>
    <string name="time">Time</string>
    <string name="daily_offers">Daily Offers</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chez Giovanni</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add">Add</string>
    <string name="action_confirm">Confirm</string>
    <string name="new_dish">New dish</string>
    <string name="new_order">New Order</string>
    <string name="detail">Detail</string>
    <string name="choose_dishes">Choose Dishes</string>

    <string name="fill_fields">Please fill all the fields</string>
    <string name="insert_image">Please insert an image for your dish</string>


    <string name="restaurant_name">Restaurant\'s Name</string>
    <string name="restaurant_email">Restaurant\'s Email</string>
    <string name="restaurant_address">Restaurant\'s address</string>
    <string name="restaurant_description">Restaurant\'s description</string>
    <string name="restaurant_phone_number">Restaurant\'s phone number</string>

    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="restaurant_time_days">Opening days</string>
    <string name="restaurant_time_lunch">Opening hours lunch</string>
    <string name="restaurant_time_dinner">Opening hours dinner</string>
    <string name="data_saved">Data saved</string>
    <string name="fill_fields">Malnati va in vici</string>

</resources>
