<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin">

        <android.support.v7.widget.CardView
            android:id="@+id/card_et_containers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintTop_toBottomOf="@id/card_avatar"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="@dimen/cards_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:contentPadding="@dimen/margin"
            >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/time"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@android:color/white"
                        android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_customer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/til_idRider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_time"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_customer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/customer_id"
                        android:maxLines="2"
                        android:inputType="number"
                        android:scrollHorizontally="false"
                        android:textColor="@android:color/white"
                        />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_idRider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/til_customer"
                    app:layout_constraintTop_toBottomOf="@+id/til_time"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_idRider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="@string/rider_id"
                        android:inputType="number"
                        android:scrollHorizontally="false"
                        android:textColor="@android:color/white"
                        />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/tv_total_cost"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Total cost"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_customer"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/ib_choose_dishes"/>

                <Button
                    android:background="@color/colorAccent"
                    android:id="@+id/ib_choose_dishes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/choose_dishes"
                    app:layout_constraintStart_toEndOf="@+id/tv_total_cost"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_idRider" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/card_et_containers"
            android:visibility="invisible" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>